--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ body{overflow-x:hidden;min-width:1100px;background:url("../img/bg.jpg");font-fam
 .boss2{width:80%;height:4px;border:1px solid #C7A462;top:80%;}
 .boss2>div{height:100%;width:0%;background:#C7A462;}
 
-.banner{position:relative;top:0px;left:-100px;width:100%;height:100%;min-height:768px;background:url("../img/basic.jpg") center no-repeat;background-size:auto 100%}
+.banner{position:relative;top:0px;left:-100px;width:100%;height:100%;min-height:768px;background:url("../img/basic.jpg") center no-repeat;background-size:auto 100%;background-color:#000;}
 .ban_img{width:1100px;margin:0 auto;height:100%;position:relative;}
 .ban_img>img,.ban_img>div{position:absolute;}
 .ban1{top:270px;left:630px;width:420px;opacity:0;}
